--- a/04-epi2by2-chisq.Rmd
+++ b/04-epi2by2-chisq.Rmd
@@ -9,9 +9,8 @@ library(foreign)
 library(here)
 ```
 
-## Lab 3: chi-square test
 
-### epi.2by2
+## epi.2by2
 
 - Summary measures for count data presented in a 2 by 2 table
 
@@ -62,7 +61,7 @@ kbl(methods) %>%
 
 - `outcome`: how the outcome variable is represented in the contingency table.
 
-#### Example
+### Example
 
 ```{r}
 # Example in A01
@@ -78,7 +77,7 @@ epi.2by2(birthwt,
          outcome = "as.rows") # the outcome is represented as rows
 ```
 
-### chisq.test
+## chisq.test
 
 - performs chi-squared contingency table tests and goodness-of-fit tests.
 
@@ -92,7 +91,7 @@ chisq.test(x, y = NULL, correct = TRUE,
 
 - `correct`: a logical indicating whether to apply **continuity correction**.
 
-#### output components
+### output components
 
 ```{r}
 chi <- chisq.test(birthwt)
@@ -111,7 +110,7 @@ chi$stdres    # standardized residuals, (observed - expected) / sqrt(V)
 
 
 
-### pchisq
+## pchisq
 
 - Density, distribution function, quantile function and random generation for the chi-squared ($\chi^2$) distribution with `df` degrees of freedom and optional non-centrality parameter `ncp`.
 
@@ -125,7 +124,7 @@ pchisq(q, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
 
 - `lower.tail`: logical; if TRUE (default), probabilities are $P[X \le x]$, otherwise, $P[X > x]$.
 
-#### Example
+### Example
 
 To find the p-value that corresponds with a $\chi^2$ test statistic of 7 from a test with one degree of freedom:
 
