--- a/packages.bib
+++ b/packages.bib
@@ -15,6 +15,40 @@
   url = {https://github.com/rstudio/bookdown},
 }
 
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel {
+             Henry} and Kirill Müller},
+  year = {2020},
+  note = {R package version 1.0.2},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-epiR,
+  title = {epiR: Tools for the Analysis of Epidemiological Data},
+  author = {Mark Stevenson and Telmo Nunes and Cord Heuer and Jonathon Marshall and Javier Sanchez and Ron Thornton and Jeno Reiczigel and Jim Robison-Cox and Paola Sebastiani and Peter Solymos},
+  year = {2020},
+  note = {R package version 2.0.17},
+  url = {https://CRAN.R-project.org/package=epiR},
+}
+
+@Manual{R-epitools,
+  title = {epitools: Epidemiology Tools},
+  author = {Tomas J. Aragon},
+  year = {2020},
+  note = {R package version 0.5-10.1},
+  url = {https://CRAN.R-project.org/package=epitools},
+}
+
+@Manual{R-foreign,
+  title = {foreign: Read Data Stored by Minitab, S, SAS, SPSS, Stata,
+Systat, Weka, dBase, ...},
+  author = {{R Core Team}},
+  year = {2020},
+  note = {R package version 0.8-81},
+  url = {https://svn.r-project.org/R-packages/trunk/foreign/},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
@@ -29,6 +63,14 @@
   year = {2020},
   note = {R package version 2.6},
   url = {https://github.com/rstudio/rmarkdown},
+}
+
+@Manual{R-survival,
+  title = {survival: Survival Analysis},
+  author = {Terry M Therneau},
+  year = {2020},
+  note = {R package version 3.2-7},
+  url = {https://github.com/therneau/survival},
 }
 
 @Book{bookdown2016,
@@ -81,5 +123,14 @@
   year = {2020},
   note = {ISBN 9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+}
+
+@Book{survival-book,
+  title = {Modeling Survival Data: Extending the {C}ox Model},
+  author = {{Terry M. Therneau} and {Patricia M. Grambsch}},
+  year = {2000},
+  publisher = {Springer},
+  address = {New York},
+  isbn = {0-387-98784-3},
 }
 
